# supportflow-agent

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/: reviews.py  runs.py  tickets.py
backend/app/evals/: __init__.py  dataset.py  runner.py  schemas.py  scoring.py  targets.py  ticket_fixtures.py  tracing.py
backend/app/graph/: __init__.py  builder.py  state.py  tracing.py
backend/app/graph/nodes/: __init__.py  apply_review_decision.py  classify_ticket.py  draft_reply.py  finalize_reply.py  human_review_interrupt.py  load_ticket_context.py  manual_takeover.py  propose_actions.py  retrieve_knowledge.py  risk_gate.py
backend/app/schemas/: __init__.py  actions.py  graph.py  ticket.py
backend/app/services/: __init__.py  action_ledger.py  pending_review_store.py  policy_engine.py  retrieval.py  run_event_store.py  run_state_service.py  run_trace_store.py  sqlite_checkpointer.py  sqlite_store.py  ticket_repo.py
backend/scripts/: run_offline_eval.py
backend/tests/: conftest.py  test_api.py  test_offline_eval.py  test_policy_engine.py  test_retrieval.py
backend/tests/integration/: test_durable_workflow_state.py  test_graph_smoke.py  test_run_state_timeline.py
data/evals/: supportflow_tickets.json  supportflow_v1.jsonl
data/kb/: account_reset.md  account_unlock.md  annual_plan_seats.md  bug_export_issue.md  refund_policy.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
frontend/src/: App.test.tsx  (+3 more)
openspec/: config.yaml
(+60 files in other folders)
